// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.muscle.exercises";
option java_outer_classname = "MuscleExercisesProto";
option objc_class_prefix = "RTG";

package muscle_exercises_object;

service Data {
  rpc AllMuscleGroups (DataEmpty) returns (stream MuscleGroups) {}
  rpc AllExercises (DataEmpty) returns (stream Exercises) {}
  rpc ExercisesForMuscleGroup (DataRequest) returns (stream Exercises) {}
  rpc MuscleGroupsForExercise (DataRequest) returns (stream MuscleGroups) {}
}

message DataEmpty {}

message DataRequest {
  int64 id = 1;
}

message MuscleGroup {
  int64 id = 1;
  string name = 2;
}

message Exercise {
  int64 id = 1;
  string name = 2;
}

message MuscleGroups {
  repeated MuscleGroup muscle_groups = 1;
}

message Exercises {
  repeated Exercise exercises = 1;
}